Fixed blog post fragment rendering on item list item click

--- a/public/stylesheets/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/components/fragment/_blog-post-fragment.scss
@@ -21,8 +21,11 @@
         aspect-ratio: 4/3;
         margin-left: auto;
         margin-right: auto;
-        border: 2px dashed white;
-        font-size: fSizes.$large;
+        
+        &.-empty {
+            border: 2px dashed white;
+            font-size: fSizes.$large;
+        }
     }
 
     &__metadata {
