--- a/views/components/form/formSelect.pug
+++ b/views/components/form/formSelect.pug
@@ -1,4 +1,4 @@
-mixin formSelect(name, options, attrs={})
+mixin formSelect(name, options, defaultOption=null, attrs={})
     .form-select&attributes(attrs.formSelect)
         - const labelWords = name.split('-')
         each word, index in labelWords
@@ -15,6 +15,8 @@ mixin formSelect(name, options, attrs={})
                 - const optionWords = option.split('-')
                 each word, index in optionWords
                     - optionWords[index] = word[0].toUpperCase() + word.slice(1)
+                
                 option(
-                    value=option
+                    value=option,
+                    selected=(option === defaultOption)
                 )= optionWords.join(' ')
