--- a/views/components/form/searchbar.pug
+++ b/views/components/form/searchbar.pug
@@ -1,8 +1,8 @@
-mixin searchbar(formClassId, placeholder)
-    .searchbar 
+mixin searchbar(placeholder, attrs={})
+    .searchbar&attributes(attrs)
         .searchbar__icon
             img(src='/images/searchIcon.png')
-        form.searchbar__form(class=formClassId)
+        form.searchbar__form
             input.searchbar__input(
                 type='text', placeholder=placeholder
             )
