--- a/views/pages/blogPostForm.pug
+++ b/views/pages/blogPostForm.pug
@@ -72,6 +72,7 @@ block page
                                 'input': {'required': ''}
                             }
                         )
+                        p * Keywords should be separated by spaces.
 
                     .blog-post-form__content.-gone
                         +formTextarea(
