--- a/views/components/fragment/blogPostFragment.pug
+++ b/views/components/fragment/blogPostFragment.pug
@@ -4,7 +4,7 @@ mixin blogPostFragment(blogPost={}, attrs={})
             .blog-post-fragment__title= blogPost.title || ''
             if blogPost.thumbnail
                 - const pic = blogPost.thumbnail
-                - const base64 = Buffer.from(pic.data).toString('base64')
+                - const base64 = pic.data.toString('base64')
                 - const dataUri = `data:${pic.contentType};base64,${base64}`
                 .blog-post-fragment__thumbnail
                     img(src=dataUri)
