--- a/views/components/list/blogPostList.pug
+++ b/views/components/list/blogPostList.pug
@@ -46,11 +46,11 @@ mixin blogPostList(blogPosts, attrs={})
                             '/images/editIcon.png',
                             `/users/${mainUser.username}/blog-posts/${blogPost._id}`,
                             null,
-                            {'class': '-small -button -slim'}
+                            {'class': '-small -button -colorful -even-padding-slim'}
                         )
                         +iconButton(
                             'blog-post-item__delete-button',
                             '/images/deleteIcon.png',
                             null,
-                            {'class': '-small -colorful'}
+                            {'class': '-small -colorful -even-padding-slim'}
                         )
