--- a/public/stylesheets/pages/_blog-post.scss
+++ b/public/stylesheets/pages/_blog-post.scss
@@ -47,11 +47,12 @@
         display: inline-block;
     }
 
-    &__stat-button-list {
+    &__reaction-list {
         flex: 2;
         display: flex;
         justify-content: center;
         align-items: center;
+        gap: 2rem;
     }
 
     &__date {
